repositioned menus in menu page, commentary header and footer complete

--- a/aboutus.html
+++ b/aboutus.html
@@ -15,6 +15,7 @@
    <body>
       <header>
          <div class="container-fluid">
+         <!--Navbar from Bootstrap and extra styling added-->
             <nav id="mynav" class="navbar navbar-expand-md fixed-top navbar-light nav-colored nav-transparent" role="navigation">
                <div class="col-2 d-md-none menu-toggle mt-2">
                   <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" 
@@ -37,10 +38,10 @@
                <div id="jesuiscollapse" class="navbar-collapse justify-content-end collapse"  >
                   <ul class="navbar-nav">
                      <li class="navbar-item">
-                        <a href="index.html" class="nav-link">Home</a>
+                        <a href="index.html" class="nav-link active">Home</a>
                      </li>
                      <li class="navbar-item">
-                        <a href="aboutus.html" class="nav-link active">About us</a>
+                        <a href="aboutus.html" class="nav-link">About us</a>
                      </li>
                      <li class="navbar-item">
                         <a href="menu.html" class="nav-link">Menu&Delivery</a>
@@ -53,7 +54,7 @@
             </nav>
          </div>
          <div>
-            <img id="about" src="assets/img/assorted-flavor-ice-creams.jpg" class="img-fluid"  alt="Icecream tubs in the display case.">
+            <img id="impact-img" src="assets/img/wonderful-ice.jpg" class="img-fluid"  alt="straweberry icecream on a plate, with berries.">
          </div>
       </header>
       <section class="container-fluid">
@@ -119,6 +120,7 @@
          </section>
       </div>
       <footer id="definitive">
+       <!-- Footer section with nav elements, addresses and Social Media links-->
          <div class="container-fluid">
             <div class="row mt-3">
                <div class="col-12">
@@ -144,13 +146,13 @@
          </div>
          <div class="row text-center mt-3 pb-2">
             <div class="col-4">
-               <a  href="https://www.facebook.com/bargelateriaoasi" target="_blank"></a> <i class="fab fa-facebook-square sochild"></i>    
+               <a  href="https://www.facebook.com/bargelateriaoasi" target="_blank" rel="noopener noreferrer"> <i class="fab fa-facebook-square sochild" aria-hidden="true"></i> </a>   
             </div>
             <div class="col-4">
-               <a href="https://www.instagram.com/bar_gelateria_oasi" target="_blank"></a> <i class="fab fa-instagram-square sochild"></i>
+               <a href="https://www.instagram.com/bar_gelateria_oasi" target="_blank" rel="noopener noreferrer"> <i class="fab fa-instagram-square sochild" aria-hidden="true"></i></a>
             </div>
             <div class="col-4">
-               <a  href="contacts.html" target="_blank"></a>  <i class="fab fa-whatsapp-square sochild"></i>
+               <a  href="contacts.html" target="_blank">  <i class="fab fa-whatsapp-square sochild" aria-hidden="true"></i></a>
             </div>
          </div>
       </footer>
@@ -161,6 +163,7 @@
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" 
          integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
       <script src="https://kit.fontawesome.com/7a907b57fb.js" crossorigin="anonymous"></script>
+      <!--Local Script-->
       <script src="myScript.js"></script>    
    </body>
 </html>
