--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
    <body>
       <header>
          <div class="container-fluid">
+         <!--Navbar from Bootstrap and extra styling added-->
             <nav id="mynav" class="navbar navbar-expand-md fixed-top navbar-light nav-colored nav-transparent" role="navigation">
                <div class="col-2 d-md-none menu-toggle mt-2">
                   <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" 
@@ -55,25 +56,27 @@
             <img id="impact-img" src="assets/img/wonderful-ice.jpg" class="img-fluid"  alt="straweberry icecream on a plate, with berries.">
          </div>
       </header>
+      <!--Presentation section with product developing description-->
       <section>
          <h2 id="pres-par">Take a minute for youself, with us</h2>
-         <p class="pres-chi">The green Bar Oasi is located on the main summer walk of Bolsena, our guests love to enjoy an icecream while visiting the lake front.
-            We focused first on the method to give the highest quality and most hot-resistant product possible for an ice-cream, we obtained satisfying
+         <p class="pres-chi">The green Bar Oasi is located on the main Summer walk of Bolsena, our guests love to enjoy an icecream while visiting the lake front.
+            We focused first on the method to give the highest quality and most hot-resistant product possible. for an ice-cream. We obtained satisfying
             results according to us and our guests.
          </p>
-         <p class="pres-chi">Since our opening in 2008, we searched for new ways to evolve our iceream culture, after attending different national events, 
+         <p class="pres-chi">Since our opening in 2008, we searched for new ways to evolve our iceream culture and after attending different national events, 
             in 2012 we found our first teacher, Donata Panciera,
             globally known for her expertise, and respectful way to choose and treat ingredients. 
             That experience changed exponencially the way we think of a new icecream flavour.
          </p>
-         <p class="pres-chi">In 2015 we were ready to renew our working style and found a perfect match in Sergio Colalucci, an italian champion of icecream making.
-            With him we gave a more modern touch to our process, we restyled the serving our glass-cups, 
+         <p class="pres-chi">In 2015 we were ready to renew our working style and we found a perfect match in Sergio Colalucci, an italian champion of icecream making.
+            With him we gave a more modern touch to our process, we restyled the serving of our glass-cups, 
             we created cakes and different icecream with a crunchy layer outside and a soft artisan icecream inside.
             The peak of our work with Sergio has been reached in 2019, we created a salted icecream served with apple chips, 
             a salted biscuit outside, and Coregone inside, a local fish of our lake.
             Our work characteristics have been deeply influenced by the encounter with Sergio Colalucci.
          </p>
       </section>
+      <!--Characteristics/Filosophy of the company-->
       <section>
          <div class="container-fluid">
             <div class="row" style="margin: 70px 0 20px 0;">
@@ -91,13 +94,13 @@
                   <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 text-center">
                      <div style="margin-bottom:65px;" id="override">
                         <h3 class="first-h">Quality <i class="fas fa-check-circle icon"></i></h3>
-                        <p>The ingredients selection and our experience guarantee for the high quality of our icecream. </p>
+                        <p>The ingredients selection, like fresh local fruit, and our experience guarantee for the high quality of our icecream. </p>
                      </div>
                   </div>
                   <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 text-center">
                      <div >
                         <h3 class="first-h">Creativity <i class="fas fa-fire-alt icon"></i></h3>
-                        <p>Everyday searching for new ways to enrich our assortment and our flaours.</p>
+                        <p>Everyday searching for new ways to enrich our assortment and our flavours.</p>
                      </div>
                   </div>
                </div>
@@ -105,8 +108,8 @@
                   <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 text-center">
                      <div>
                         <h3 class="first-h">Innovation <i class="fas fa-tachometer-alt icon"></i></h3>
-                        <p>Our renovated techniques serve alongside our classics, and play a central role in our 
-                           more ambitious combinations distanciating our icecream from its traditional atmosphere.
+                        <p>Our updated techniques serve alongside our classics, and play a central role in our 
+                            ambitious combinations distanciating our icecream from the Traditional Atmosphere.
                         </p>
                      </div>
                   </div>
@@ -121,8 +124,9 @@
             </div>
          </div>
       </section>
-      <!-------------------------------------------------Quotes -->
+     
       <footer id="definitive">
+       <!-- Footer section with nav elements, addresses and Social Media links-->
          <div class="container-fluid">
             <div class="row mt-3">
                <div class="col-12">
@@ -148,13 +152,13 @@
          </div>
          <div class="row text-center mt-3 pb-2">
             <div class="col-4">
-               <a  href="https://www.facebook.com/bargelateriaoasi" target="_blank"></a> <i class="fab fa-facebook-square sochild"></i>    
+               <a  href="https://www.facebook.com/bargelateriaoasi" target="_blank" rel="noopener noreferrer"> <i class="fab fa-facebook-square sochild" aria-hidden="true"></i> </a>   
             </div>
             <div class="col-4">
-               <a href="https://www.instagram.com/bar_gelateria_oasi" target="_blank"></a> <i class="fab fa-instagram-square sochild"></i>
+               <a href="https://www.instagram.com/bar_gelateria_oasi" target="_blank" rel="noopener noreferrer"> <i class="fab fa-instagram-square sochild" aria-hidden="true"></i></a>
             </div>
             <div class="col-4">
-               <a  href="contacts.html" target="_blank"></a>  <i class="fab fa-whatsapp-square sochild"></i>
+               <a  href="contacts.html" target="_blank">  <i class="fab fa-whatsapp-square sochild" aria-hidden="true"></i></a>
             </div>
          </div>
       </footer>
@@ -166,6 +170,7 @@
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" 
          integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
       <script src="https://kit.fontawesome.com/7a907b57fb.js" crossorigin="anonymous"></script>
+      <!--Local Script-->
       <script src="myScript.js"></script>
    </body>
 </html>
