--- a/menu.html
+++ b/menu.html
@@ -15,6 +15,7 @@
    <body>
       <header>
          <div class="container-fluid">
+         <!--Navbar from Bootstrap and extra styling added-->
             <nav id="mynav" class="navbar navbar-expand-md fixed-top navbar-light nav-colored nav-transparent" role="navigation">
                <div class="col-2 d-md-none menu-toggle mt-2">
                   <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" 
@@ -37,13 +38,13 @@
                <div id="jesuiscollapse" class="navbar-collapse justify-content-end collapse"  >
                   <ul class="navbar-nav">
                      <li class="navbar-item">
-                        <a href="index.html" class="nav-link">Home</a>
+                        <a href="index.html" class="nav-link active">Home</a>
                      </li>
                      <li class="navbar-item">
                         <a href="aboutus.html" class="nav-link">About us</a>
                      </li>
                      <li class="navbar-item">
-                        <a href="menu.html" class="nav-link active">Menu&Delivery</a>
+                        <a href="menu.html" class="nav-link">Menu&Delivery</a>
                      </li>
                      <li class="navbar-item">
                         <a href="contacts.html" class="nav-link">Contacts</a>
@@ -53,10 +54,26 @@
             </nav>
          </div>
          <div>
-            <img id="takeaw" src="assets/img/oasi.jpg" class="img-fluid"  alt="Take away box, icecream flavours in the back">
+            <img id="impact-img" src="assets/img/wonderful-ice.jpg" class="img-fluid"  alt="straweberry icecream on a plate, with berries.">
          </div>
       </header>
       <section style="margin-top:25px;" class="container-fluid">
+            <div class="row">
+               <div class="col-12 text-center">
+                  <h2 id="checkall">Check all our Menu's</h2>
+               </div>
+            </div>
+            <div class="row text-center">
+               <div class="col-lg-4 col-xl-4 col-md-6 col-sm-12 ">
+                  <a class="menu1" id="food" href="assets/PDF/convert-jpg-to-pdf.net-Food.pdf" target="_blank" rel="">Panini's</a>
+               </div>
+               <div class="col-lg-4 col-xl-4 col-md-6 col-sm-12">
+                  <a class="menu1" id="drink" href="assets/PDF/convert-jpg-to-pdf.net-Drink.pdf" target="_blank" rel=" noreferrer">Drinks</a>
+               </div>
+               <div class="col-lg-4 col-xl-4 col-md-12 col-sm-12">
+                  <a class="menu1" href="assets/PDF/smallpdf-ice.pdf" target="_blank" rel=" noreferrer">Icecream</a>
+               </div>
+            </div>
          <div class="row">
             <div class="col-12 text-center first-h">
                <h2>Wishing for something different?</h2>
@@ -81,22 +98,6 @@
          <div class="container-fluid">
             <div class="row">
                <div class="col-12 text-center">
-                  <h2 id="checkall">Check all our Menu's</h2>
-               </div>
-            </div>
-            <div class="row text-center">
-               <div class="col-lg-4 col-xl-4 col-md-6 col-sm-12 ">
-                  <a class="menu1" id="food" href="assets/PDF/convert-jpg-to-pdf.net-Food.pdf" target="_blank" rel="">Panini's</a>
-               </div>
-               <div class="col-lg-4 col-xl-4 col-md-6 col-sm-12">
-                  <a class="menu1" id="drink" href="assets/PDF/convert-jpg-to-pdf.net-Drink.pdf" target="_blank" rel=" noreferrer">Drinks</a>
-               </div>
-               <div class="col-lg-4 col-xl-4 col-md-12 col-sm-12">
-                  <a class="menu1" href="assets/PDF/smallpdf-ice.pdf" target="_blank" rel=" noreferrer">Icecream</a>
-               </div>
-            </div>
-            <div class="row">
-               <div class="col-12 text-center">
                   <h2>Our quality at your doorstep, here some delivery options!</h2>
                </div>
             </div>
@@ -111,6 +112,7 @@
          </div>
       </section>
       <footer id="definitive">
+       <!-- Footer section with nav elements, addresses and Social Media links-->
          <div class="container-fluid">
             <div class="row mt-3">
                <div class="col-12">
@@ -136,13 +138,13 @@
          </div>
          <div class="row text-center mt-3 pb-2">
             <div class="col-4">
-               <a  href="https://www.facebook.com/bargelateriaoasi" target="_blank"></a> <i class="fab fa-facebook-square sochild"></i>    
+               <a  href="https://www.facebook.com/bargelateriaoasi" target="_blank" rel="noopener noreferrer"> <i class="fab fa-facebook-square sochild" aria-hidden="true"></i> </a>   
             </div>
             <div class="col-4">
-               <a href="https://www.instagram.com/bar_gelateria_oasi" target="_blank"></a> <i class="fab fa-instagram-square sochild"></i>
+               <a href="https://www.instagram.com/bar_gelateria_oasi" target="_blank" rel="noopener noreferrer"> <i class="fab fa-instagram-square sochild" aria-hidden="true"></i></a>
             </div>
             <div class="col-4">
-               <a  href="contacts.html" target="_blank"></a>  <i class="fab fa-whatsapp-square sochild"></i>
+               <a  href="contacts.html" target="_blank">  <i class="fab fa-whatsapp-square sochild" aria-hidden="true"></i></a>
             </div>
          </div>
       </footer>
@@ -153,6 +155,7 @@
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" 
          integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
       <script src="https://kit.fontawesome.com/7a907b57fb.js" crossorigin="anonymous"></script>
+      <!--Local Script-->
       <script src="myScript.js"></script>
    </body>
 </html>
