--- a/aboutus.html
+++ b/aboutus.html
@@ -38,10 +38,10 @@
                <div id="jesuiscollapse" class="navbar-collapse justify-content-end collapse"  >
                   <ul class="navbar-nav">
                      <li class="navbar-item">
-                        <a href="index.html" class="nav-link active">Home</a>
+                        <a href="index.html" class="nav-link">Home</a>
                      </li>
                      <li class="navbar-item">
-                        <a href="aboutus.html" class="nav-link">About us</a>
+                        <a href="aboutus.html" class="nav-link active">About us</a>
                      </li>
                      <li class="navbar-item">
                         <a href="menu.html" class="nav-link">Menu&Delivery</a>
@@ -58,6 +58,7 @@
          </div>
       </header>
       <section class="container-fluid">
+      <!--Story section with founders picture and company history-->
          <div style="margin:60px 5px 5px;" class="row">
             <div class="col-12">
                <h1>Our Story</h1>
@@ -80,6 +81,7 @@
          </div>
       </section>
       <div class="container-fluid">
+      <!--Quotes section with real quotes from Google, translated to English-->
          <section class="quotes">
             <div class="row">
                <div class="col-12 my-4 ">
@@ -110,7 +112,7 @@
                      </div>
                      <div>
                         <blockquote>
-                           <p>Do not miss the opportunity to eat an ice cream made with passion and care by David, on the lakefront of Bolsena!</p>
+                           <p>Do not miss the opportunity to eat an icecream made with passion and care by David, on the lakefront of Bolsena!</p>
                            <p>- Claudia Storce'</p>
                         </blockquote>
                      </div>
