--- a/contacts.html
+++ b/contacts.html
@@ -40,7 +40,7 @@
                <div id="jesuiscollapse" class="navbar-collapse justify-content-end collapse"  >
                   <ul class="navbar-nav">
                      <li class="navbar-item">
-                        <a href="index.html" class="nav-link active">Home</a>
+                        <a href="index.html" class="nav-link">Home</a>
                      </li>
                      <li class="navbar-item">
                         <a href="aboutus.html" class="nav-link">About us</a>
@@ -49,7 +49,7 @@
                         <a href="menu.html" class="nav-link">Menu&Delivery</a>
                      </li>
                      <li class="navbar-item">
-                        <a href="contacts.html" class="nav-link">Contacts</a>
+                        <a href="contacts.html" class="nav-link active">Contacts</a>
                      </li>
                   </ul>
                </div>
