--- a/menu.html
+++ b/menu.html
@@ -38,13 +38,13 @@
                <div id="jesuiscollapse" class="navbar-collapse justify-content-end collapse"  >
                   <ul class="navbar-nav">
                      <li class="navbar-item">
-                        <a href="index.html" class="nav-link active">Home</a>
+                        <a href="index.html" class="nav-link ">Home</a>
                      </li>
                      <li class="navbar-item">
                         <a href="aboutus.html" class="nav-link">About us</a>
                      </li>
                      <li class="navbar-item">
-                        <a href="menu.html" class="nav-link">Menu&Delivery</a>
+                        <a href="menu.html" class="nav-link active">Menu&Delivery</a>
                      </li>
                      <li class="navbar-item">
                         <a href="contacts.html" class="nav-link">Contacts</a>
@@ -57,6 +57,7 @@
             <img id="impact-img" src="assets/img/wonderful-ice.jpg" class="img-fluid"  alt="straweberry icecream on a plate, with berries.">
          </div>
       </header>
+      <!--Menu's divided per category, same color of the Logo-->
       <section style="margin-top:25px;" class="container-fluid">
             <div class="row">
                <div class="col-12 text-center">
@@ -74,6 +75,7 @@
                   <a class="menu1" href="assets/PDF/smallpdf-ice.pdf" target="_blank" rel=" noreferrer">Icecream</a>
                </div>
             </div>
+            <!--different offers pictures, per occasion-->
          <div class="row">
             <div class="col-12 text-center first-h">
                <h2>Wishing for something different?</h2>
@@ -81,12 +83,12 @@
          </div>
          <div class="row text-center">
             <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 mt-10 ml-10">
-               <img class="differs" src="assets/img/coppa-hey.jpg" alt="chocolate ice cream, with whipped cream in a glass cup">
-               <p class="monty">One of our glasscups, for you or to share</p>
-            </div>
-            <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 mt-10 ml-10">
                <img class="differs" src="assets/img/crunchies1.jpg" alt="icecreams on sticks, with crunchy chocolate outside and soft icream inside">
                <p class="monty">A bite of artisanal crunch</p>
+            </div>
+            <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 mt-10 ml-10">
+               <img class="differs" src="assets/img/coppa-hey.jpg" alt="chocolate ice cream, with whipped cream in a glass cup">
+               <p class="monty">One of our glasscups, for you or to share</p>
             </div>
             <div class="col-xl-4 col-lg-12 col-md-12 col-sm-12 mt-10 ml-10">
                <img class="differs" src="assets/img/ice-cake.jpg" alt="strawberry icecream donut-shaped cake">
@@ -94,6 +96,7 @@
             </div>
          </div>
       </section>
+      <!--Simplified Menu for delivery options-->
       <section>
          <div class="container-fluid">
             <div class="row">
