corrected copy/paste header errors

--- a/aboutus.html
+++ b/aboutus.html
@@ -54,7 +54,7 @@
             </nav>
          </div>
          <div>
-            <img id="impact-img" src="assets/img/wonderful-ice.jpg" class="img-fluid"  alt="straweberry icecream on a plate, with berries.">
+            <img id="about" src="assets/img/assorted-flavor-ice-creams.jpg" class="img-fluid"  alt="Inside of the icecream display case">
          </div>
       </header>
       <section class="container-fluid">
