--- a/contacts.html
+++ b/contacts.html
@@ -56,12 +56,12 @@
             </nav>
          </div>
          <div>
-            <img id="impact-img" src="assets/img/wonderful-ice.jpg" class="img-fluid"  alt="straweberry icecream on a plate, with berries.">
+            <img id="girly" src="assets/img/woman-in-black-and-white-polka-dot--dress.jpg" class="img-fluid"  alt="Woman in front of laptop, phone in hand, about to contact the shop.">
          </div>
       </header>
 
 <section>
-
+<!--How to keep in touch section-->
     <div class="container-fluid">
         <div class="row">
             <div class="col-12">
@@ -79,15 +79,14 @@
 
             <div class="col-xl-6 col-lg-6 col-md-6  col-sm-12">
             
-               <p id="floater">If you have any more specific requests about a party you want to give, or our delivery routes you can use our form below and explain us what we can do for you, we'll get in touch asap</p>
+               <p>If you have any more specific requests about a party you want to give, or our delivery routes you can use our form below and explain us what we can do for you, we'll get in touch asap</p>
             </div>
         </div>
     </div>
-
-
 </section>
 
 <form>
+<!--Form from Bootstrap with sections added to satisfy clear customer requests-->
   <div class="container-fluid" style="margin:0 auto;">
     <div class="row">
         <div class="col-12">
