--- a/menu.html
+++ b/menu.html
@@ -54,7 +54,7 @@
             </nav>
          </div>
          <div>
-            <img id="impact-img" src="assets/img/wonderful-ice.jpg" class="img-fluid"  alt="straweberry icecream on a plate, with berries.">
+            <img id="takeaw" src="assets/img/oasi.jpg" class="img-fluid"  alt="Take-away icecream box, icecream display case in the back">
          </div>
       </header>
       <!--Menu's divided per category, same color of the Logo-->
