phone number uniformed in all footers and pages

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                </div>
                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                   <p class="space"><i class="fas fa-map-marker-alt"></i> Viale Cadorna 9, Bolsena. Italy</p>
-                  <p class="space"><i class="fas fa-phone"></i> Phone: 0039 555 55 55 555</p>
+                  <p class="space"><i class="fas fa-phone"></i> Phone: 338 52 44 261</p>
                   <p class="space"><i class="fas fa-envelope"></i> Email: <a href="mailto:baroasi@hotmail.it">baroasi@hotmail.it</a></p>
                </div>
             </div>
