resized explanation/textarea section, consistent with submit button

--- a/contacts.html
+++ b/contacts.html
@@ -140,12 +140,18 @@
             <h3 style="float:left;">Explanation / Description</h3>
         </div>
     </div>
-  <div class="form-group">
-    <textarea class="form-control" id="explain" rows="5"></textarea>
-  </div>
+    <div class="row">
+        <div class="col-12">
+            <div class="form-group">
+                <textarea class="form-control" id="explain" rows="5"></textarea>
+            </div>
+        </div>
+        <div class="col">
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+    </div>
+   </div>
 
-  </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
 
 </form>
 
