--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </header>
       <!--Presentation section with product developing description-->
       <section>
-         <h2 id="pres-par">Take a minute for youself, with us</h2>
+         <h2 id="pres-par">Take a Minute For Youself, With Us</h2>
          <p class="pres-chi">The green Bar Oasi is located on the main Summer walk of Bolsena, our guests love to enjoy an icecream while visiting the lake front.
             We focused first on the method to give the highest quality and most hot-resistant product possible. for an ice-cream. We obtained satisfying
             results according to us and our guests.
